# MSICompiler

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml
extras/: New-MSICompilerMSIPackage.ps1  New-PyInstallerBinary.ps1  package_msicompiler.yml
msi_compiler/: __main__.py  cli.py  compiler.py  config.py  custom_actions.py  database_data.py  exceptions.py  msilib_util.py  types.py
package/: README.md
tests/: cleanup.py  config.yml  msilib_objs.py  test_compile.py  test_config.py  test_custom_actions.py  test_database_data.py  test_main.py  test_msilib_util.py
tests/fixtures/: config.yml
tests/fixtures/testpack/: script.ps1
tests/testdest/: script.ps1
tests/testpack/: README.txt
