[project]
name = "MsiCompiler"
requires-python = ">=3.10"
version = "1.0.1"
description = "MsiCompiler - It Compiles MSI packages"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "altgraph==0.17.4",
    "click==8.1.7",
    "colorama==0.4.6",
    "exceptiongroup==1.2.0",
    "iniconfig==2.0.0",
    "packaging==23.2",
    "pefile==2023.2.7",
    "pillow==10.2.0",
    "pluggy==1.4.0",
    "pyinstaller==6.4.0",
    "pyinstaller-hooks-contrib==2024.2",
    "pytest==8.1.1",
    "pywin32-ctypes==0.2.2",
    "PyYAML==6.0.1",
    "tomli==2.0.1",
]

[project.license]
text = "MIT"

[[project.authors]]
name = "Cam Ratchford"
email = "camratchford@gmail.com"

[project.urls]
Homepage = "https://github.com/camratchford/MsiCompiler"
Source = "https://github.com/camratchford/MsiCompiler"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["msi_compiler"]

[project.scripts]
msicompiler = "msi_compiler.cli:run"

